--- a/newproject.html
+++ b/newproject.html
@@ -11,6 +11,16 @@
         <div class="header">
            <img class="logo" src="logoo.png" alt="">
            <div class="textlogo">Finity Touch</div>
+           <div class="leftpartheader">
+            <ul class="leftpartheader">
+                <li>Home</li>
+                <li>Marketplace</li>
+                <li class="tok">Token</li>
+                <li>fund</li>
+            </ul>
+
+           </div>
+        
         </div>
            <img class="crug"src="img/crugonfirstpage1920.png" alt="">
            <div class="textnearcrug">Finity Token</div>
