--- a/newproject.html
+++ b/newproject.html
@@ -18,6 +18,11 @@
                 <li class="tok">Token</li>
                 <li>fund</li>
             </ul>
+            <img class="brt" src="/img/oooo.png" alt="">
+            <ul class="rightpartheader">
+                <li>Contact Us</li>
+                <li class="uio">Buy Token</li>
+            </ul>
 
            </div>
         
